login/register and user logo placed at cart line

--- a/templates/base/navbar.html
+++ b/templates/base/navbar.html
@@ -48,34 +48,6 @@
         <a href="tel:#"><i class="icon-phone"></i>Call: +0123 456 789</a>
       </div>
       <!-- End .header-left -->
-
-      <div class="header-right">
-        <ul class="top-menu">
-          <li>
-            <a href="#">Links</a>
-            <ul>
-              {% if user.id is None%}
-
-              <li>
-                <a href="#signin-modal" data-toggle="modal"
-                  >Sign in / Sign up</a
-                >
-              </li>
-              {% else %}
-              <div class="dropdown">
-                Welcome  <a href="#"> <span>{{user.full_name}}</span> <i class="fas fa-chevron-circle-down"></i></a>
-                <div class="dropdown-content">
-                  <a href="{% url 'auth:dashboard' %}">Dashboard</a>
-                  <a href="{% url 'auth:logout' %}">Logout</a>
-                </div>
-              </div>
-              {% endif %}
-            </ul>
-          </li>
-        </ul>
-        <!-- End .top-menu -->
-      </div>
-      <!-- End .header-right -->
     </div>
     <!-- End .container -->
   </div>
@@ -226,6 +198,29 @@
         <!-- End .cart-dropdown -->
       </div>
       <!-- End .header-right -->
+      <div class="header-right" style="margin-left:5rem;">
+        <ul class="top-menu">
+          <li>
+            <ul>
+              {% if user.id is None %}
+              <li>
+                <a href="#signin-modal" data-toggle="modal"> Sign in / Sign up </a>
+              </li>
+              {% else %}
+              <div class="dropdown">
+               <a href="#"><i class="icon-user" style="font-size: 3.6rem;"></i></a>
+                <!-- <i class="icon-user"></i> -->
+                <div class="dropdown-content" style="margin-left:1rem; font-size: 18px; ">
+                  <a href="{% url 'auth:dashboard' %}">Dashboard</a>
+                  <a href="{% url 'auth:logout' %}">Logout</a>
+                </div>
+              </div>
+              {% endif %}
+            </ul>
+          </li>
+        </ul>
+        <!-- End .top-menu -->
+      </div>
     </div>
     <!-- End .container -->
   </div>
