added social media icon in callnow line

--- a/templates/base/footer.html
+++ b/templates/base/footer.html
@@ -14,9 +14,12 @@
                             Got Question? Call us 24/7
                             <a href="#">+977-9868281050</a>         
                         </div><!-- End .widget-call -->
+                        <div class="widget-call">
+                            <a href="https://www.facebook.com/smartdealsnepalonline"><i class="icon-facebook" style="color: blue;"></i></a>&nbsp; &nbsp;
+                            <a href="https://www.instagram.com/smartdealsnepal"><i class="icon-instagram" style="color: rgba(247, 60, 76, 0.815); margin-left: 40px;"></i></a>
+                        </div>
                     </div><!-- End .widget about-widget -->
                 </div><!-- End .col-sm-6 col-lg-3 -->
-
                 <div class="col-sm-6 col-lg-3">
                     <div class="widget">
                         <h4 class="widget-title">Useful Links</h4><!-- End .widget-title -->
