--- a/templates/base/navbar.html
+++ b/templates/base/navbar.html
@@ -45,7 +45,9 @@
   <div class="header-top" style="padding-top: 10px; font-size: 18px">
     <div class="container">
       <div class="header-left">
-        <a href="tel:#"><i class="icon-phone"></i>Call: +0123 456 789</a>
+        <a href="tel:#"><i class="icon-phone"></i>Call: +0123 456 789</a>&nbsp;	&nbsp;	&nbsp;
+        <a href="https://www.facebook.com/smartdealsnepalonline"><i class="icon-facebook" style="color: blue;"></i></a>&nbsp;	&nbsp;
+        <a href="https://www.instagram.com/smartdealsnepal"><i class="icon-instagram" style="color: rgba(247, 60, 76, 0.815);"></i></a>
       </div>
       <!-- End .header-left -->
     </div>
