call now removed from navbar and footer

--- a/templates/base/footer.html
+++ b/templates/base/footer.html
@@ -8,13 +8,7 @@
                         <img src="{% static 'assets/images/smart_deals_nepal_logo.png' %}" class="footer-logo" alt="Footer Logo" width="165px" height="75px">
                         <!-- <h3>Smart Online</h3> -->
                         <p></p>
-
-                        <div class="widget-call">
-                            <i class="icon-phone"></i>
-                            Got Question? Call us 24/7
-                            <a href="#">+977-9868281050</a>         
-                        </div><!-- End .widget-call -->
-                        <div class="widget-call">
+                        <div class="widget-call" style="border: none;">
                             <a href="https://www.facebook.com/smartdealsnepalonline"><i class="icon-facebook" style="color: blue;"></i></a>&nbsp; &nbsp;
                             <a href="https://www.instagram.com/smartdealsnepal"><i class="icon-instagram" style="color: rgba(247, 60, 76, 0.815); margin-left: 40px;"></i></a>
                         </div>
