about us and contact page and other issues solved

--- a/accounts/templates/dashboard.html
+++ b/accounts/templates/dashboard.html
@@ -35,12 +35,12 @@
             <div class="card" style="background-color: beige">
               <div class="card-body">
                 <h5 class="card-title">Total Orders</h5>
-                <h4>100</h4>
+                <h4>{{order_count}}</h4>
                 <a href="">View Orders</a>
               </div>
             </div>
           </div>
-          <div class="col-md-6">
+          {% comment %} <div class="col-md-6">
             <div class="card" style="background-color: aliceblue">
               <div class="card-body">
                 <h5 class="card-title">Total Orders</h5>
@@ -48,7 +48,7 @@
                 <a href="">View Orders</a>
               </div>
             </div>
-          </div>
+          </div> {% endcomment %}
         </div>
       </div>
     </main>
