--- a/accounts/templates/orders.html
+++ b/accounts/templates/orders.html
@@ -13,7 +13,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-md-6">
+        {% comment %} <div class="col-md-6">
             <div class="card"style="
             background-color: aliceblue;
         ">
@@ -23,7 +23,7 @@
                     <a href="">View Orders</a>
                 </div>
             </div>
-        </div>
+        </div> {% endcomment %}
         
     </div>
 </div>
