--- a/templates/modal/signin.html
+++ b/templates/modal/signin.html
@@ -24,11 +24,14 @@
                         <div class="tab-content" id="tab-content-5">
                             <div class="tab-pane fade show active" id="signin" role="tabpanel"
                                 aria-labelledby="signin-tab">
+                                
+                                <div id="msg"></div>
+                                
                                 <form action="#" method="POST">
                                     {% csrf_token %}
                                     <div class="form-group">
                                         <label for="singin-email">Email address *</label>
-                                        <input type="text" class="form-control" id="singin-email" name="email" required>
+                                        <input type="email" class="form-control" id="singin-email" name="email" required>
                                     </div><!-- End .form-group -->
 
                                     <div class="form-group">
@@ -156,11 +159,14 @@
                 'password': password,
             },
             success:function(response){
-                console.log(',,,,,,,,,,,,,,,,');
                 console.log(response.is_superadmin);
                 if(response.is_superadmin == true) location.href = "{% url 'admin:index' %}";
                 else location.href = "{% url 'auth:dashboard' %}";
                 {% comment %} location.reload(); {% endcomment %}
+            },
+            error:function(response){
+                $('#msg').html(response.responseJSON.message);
+                $('#msg').addClass('alert alert-danger');
             }
 
         });
