--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -118,12 +118,8 @@
 
                                     <tr class="summary-shipping-row">
                                         <td>
-                                            <div class="custom-control custom-radio">
-                                                <input type="radio" id="free-shipping" name="shipping"
-                                                    class="custom-control-input">
-                                                <label class="custom-control-label" for="free-shipping">Free
+                                                <label for="free-shipping">Free
                                                     Shipping</label>
-                                            </div><!-- End .custom-control -->
                                         </td>
                                         <td>Rs. 0.00</td>
                                     </tr><!-- End .summary-shipping-row -->
