--- a/templates/base/footer.html
+++ b/templates/base/footer.html
@@ -22,9 +22,8 @@
                         <h4 class="widget-title">Useful Links</h4><!-- End .widget-title -->
 
                         <ul class="widget-list">
-                            <li><a href="#">Our Services</a></li>
-                            <li><a href="faq.html">FAQ</a></li>
-                            <li><a href="#">Contact us</a></li>
+                            <li><a href="{% url 'general:about_us' %}">About Us</a></li>
+                            <li><a href="{% url 'general:contact_us' %}">Contact us</a></li>
                         </ul><!-- End .widget-list -->
                     </div><!-- End .widget -->
                 </div><!-- End .col-sm-6 col-lg-3 -->
