--- a/templates/base.html
+++ b/templates/base.html
@@ -43,6 +43,8 @@
 
         {% endblock content %}
         {% include 'base/footer.html' %}
+    </div>
+    <button id="scroll-top" title="Back to Top"><i class="icon-arrow-up" style="color:red;"></i></button>
 
 
     {% include 'modal/signin.html' %}
