--- a/accounts/templates/login.html
+++ b/accounts/templates/login.html
@@ -6,7 +6,7 @@
     <form action="{% url 'auth:login' %}" method="POST">
       {% csrf_token %}
         <div class="form-group">
-           <input type="email" class="form-control" placeholder="Email Address" name="email">
+           <input type="email" class="form-control" placeholder="Email" name="email">
         </div> <!-- form-group// -->
         <div class="form-group">
           <input type="password" class="form-control" placeholder="Password" name="password">
@@ -17,7 +17,7 @@
 
         </div> <!-- form-group form-check .// -->
         <div class="form-group">
-            <button type="submit" class="btn btn-primary btn-block"> Login  </button>
+            <button type="submit" class="btn btn-primary btn-block"> Login   </button>
         </div> <!-- form-group// -->
     </form>
     </div> <!-- card-body.// -->
