--- a/accounts/templates/reset_password_email.html
+++ b/accounts/templates/reset_password_email.html
@@ -221,7 +221,7 @@
                                     <tr>
                                         <td class="content" align="center">
                                             <p class=" sub align-center">
-                                                &copy; Smart Deals
+                                                &copy; Smart Deals Nepal
                                             </p>
                                         </td>
                                     </tr>
