--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -20,7 +20,7 @@
 
     <div class="page-content">
         {% if not cart_items%}
-        <h2 class="text-center">you shopping cart is empty</h2>
+        <h2 class="text-center">Your shopping cart is empty</h2>
         <a href="{% url 'store:store' %}" class="btn btn-outline-dark-2 btn-block mb-3"><span>CONTINUE
                 SHOPPING</span><i class="icon-refresh"></i></a>
 
