--- a/store/templates/store/product-detail.html
+++ b/store/templates/store/product-detail.html
@@ -7,7 +7,7 @@
             <ol class="breadcrumb">
                 <li class="breadcrumb-item"><a href="index.html">Home</a></li>
                 <li class="breadcrumb-item"><a href="#">Products</a></li>
-                <li class="breadcrumb-item active" aria-current="page">Default</li>
+                <li class="breadcrumb-item active" aria-current="page">Shop</li>
             </ol>
 
            
