--- a/templates/base_forgetpw.html
+++ b/templates/base_forgetpw.html
@@ -8,17 +8,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>SmartBaje</title>
+    <title>Smart Deals Nepal</title>
     <meta name="keywords" content="HTML5 Template">
-    <meta name="description" content="SmartBaje">
+    <meta name="description" content="SmartDealsNepal">
     <meta name="author" content="p-themes">
     <!-- Favicon -->
-    <link rel="apple-touch-icon" sizes="180x180" href="{% static 'assets/images/icons/apple-touch-icon.png' %}">
-    <link rel="icon" type="image/png" sizes="32x32" href="{% static 'assets/images/icons/favicon-32x32.png' %}">
-    <link rel="icon" type="image/png" sizes="16x16" href="{% static 'assets/images/icons/favicon-16x16.png' %}">
-    <link rel="manifest" href="{% static 'assets/images/icons/site.html' %}">
-    <link rel="mask-icon" href="{% static 'assets/images/icons/safari-pinned-tab.svg' %}" color="#666666">
-    <link rel="shortcut icon" href="{% static 'assets/images/icons/favicon.ico' %}">
+    <link rel="shortcut icon" href="{% static 'assets/images/icons/SDN_logo.jpg' %}">
     <meta name="apple-mobile-web-app-title" content="Molla">
     <meta name="application-name" content="Molla">
     <meta name="msapplication-TileColor" content="#cc9966">
@@ -41,12 +36,13 @@
 
 <body>
     <div class="page-wrapper">
+        {% include 'base/navbar.html' %}
         {% include 'base/alerts.html' %}
 
         {% block content %}
 
         {% endblock content %}
-
+        {% include 'base/footer.html' %}
 
 
 
@@ -82,5 +78,4 @@
 </body>
 
 
-<!-- molla/index-4.html  22 Nov 2019 09:54:18 GMT -->
 </html>
