--- a/accounts/templates/orders.html
+++ b/accounts/templates/orders.html
@@ -8,7 +8,7 @@
         ">
                 <div class="card-body">
                     <h5 class="card-title">Total Orders</h5>
-                    <h4>100</h4>
+                    <h4>{{order_count}}</h4>
                     <a href="">View Orders</a>
                 </div>
             </div>
