--- a/store/templates/store/all_products.html
+++ b/store/templates/store/all_products.html
@@ -165,7 +165,6 @@
           <div class="sidebar sidebar-shop">
             <div class="widget widget-clean">
               <label>Filters:</label>
-              <a href="#" class="sidebar-filter-clear">Clean All</a>
             </div>
             <!-- End .widget widget-clean -->
 
@@ -214,6 +213,33 @@
               </div>
               <!-- End .collapse -->
             </div>
+
+            <div class="widget widget-collapsible">
+              <h3 class="widget-title">
+                <a data-toggle="collapse" href="#widget-4" role="button" aria-expanded="true" aria-controls="widget-4">
+                    Brand
+                </a>
+            </h3><!-- End .widget-title -->
+
+            <div class="collapse show" id="widget-4">
+              <div class="widget-body">
+                <div class="filter-items filter-items-count">
+                  {% for brand in brands %}
+                  <div class="filter-item ">
+                    <div class="custom-control custom-checkbox">
+                      <input type="checkbox" name="brand-{{brand.id}}" class="custom-control-input filter-brand" id="brand-{{brand.id}}"/>
+                      <label class="custom-control-label" for="brand-{{brand.id}}">{{brand.name| title}}</label>
+                    </div><!-- End .custom-checkbox -->
+                    <span class="item-count"
+                        >{{brand.product_set.count}}</span
+                      >
+                  </div><!-- End .filter-item -->
+                  {% endfor %}
+                </div>
+              </div>
+            </div>
+              </div>
+
             <!-- End .widget -->
             <div class="widget widget-collapsible">
               <h3 class="widget-title">
@@ -277,6 +303,25 @@
       },
     });
   });
+
+  $(document).on("click", ".filter-brand", function (event) {
+    const csrftoken = getCookie("csrftoken");
+    $.ajax({
+      type: "POST",
+      url: "{% url 'store:brand-filter' %}",
+      data: {
+        csrfmiddlewaretoken: csrftoken,
+        brand: $(this).attr("id"),
+      },
+      success: function (data) {
+        $(".col-lg-9").html(data);
+      },
+    });
+  });
+
+  $('input[type="checkbox"]').on('change', function() {
+    $('input[type="checkbox"]').not(this).prop('checked', false);
+ });
 </script>
 
 {% endblock javascript %}
