--- a/templates/base/navbar.html
+++ b/templates/base/navbar.html
@@ -1,5 +1,14 @@
 {% load static %}
+{% load socialaccount %}
+{% providers_media_js %}
+
 <style>
+
+  .profile{
+    display: flex;
+    align-items: center;
+  }
+
   .dropbtn {
     background-color: #04aa6d;
     color: white;
@@ -19,8 +28,10 @@
     background-color: #f1f1f1;
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-    z-index: 1;
+    z-index: 5;
   }
+
+
 
   .dropdown-content a {
     color: black;
@@ -209,8 +220,10 @@
               </li>
               {% else %}
               <div class="dropdown">
-               <a href="#"><i class="icon-user" style="font-size: 3.6rem;"></i></a>
-               <p>{{user.username}}</p>
+                <div class="profile">
+                  <a href="#"><i class="icon-user" style="font-size: 3.6rem;"></i></a>
+                  <p>{{user.username}}</p>
+                </div>
                 <!-- <i class="icon-user"></i> -->
                 <div class="dropdown-content" style="margin-left:1rem; font-size: 15px; ">
                   <a href="{% url 'auth:dashboard' %}">Dashboard</a>
